<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_white_transparent_bg"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:text="@string/skip_selfie"
        android:textColor="#333"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/tvYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/tvNo"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/yes"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/no"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>