<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:src="@drawable/hg_logo" />

    <ImageView
        android:id="@+id/ivSkinExpertLogo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/ivLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-60dp"
        android:layout_marginBottom="-60dp"
        android:padding="10dp"
        android:src="@drawable/skinexpertlogo"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivSkinExpertLogo"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="USERNAME"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_white"
            android:drawableStart="@drawable/ic_user_16"
            android:drawablePadding="12dp"
            android:drawableTint="@color/colorAccent"
            android:fontFamily="@font/montserrat_regular"
            android:hint="Enter your Username"
            android:inputType="textEmailAddress"
            android:paddingStart="14dp"
            android:paddingTop="10dp"
            android:paddingEnd="14dp"
            android:paddingBottom="10dp"
            android:selectAllOnFocus="true"
            android:textColor="#333"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:text="PASSWORD"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white"
            android:drawableStart="@drawable/ic_pwd_16"
            android:drawablePadding="12dp"
            android:drawableTint="@color/colorAccent"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="10dp"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="48dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/bg_orange"
            android:enabled="true"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/action_sign_in"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="13sp"

            android:textStyle="bold" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />
</RelativeLayout>